--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 scikit-learn = "^1.5.2"
 numpy = "^2.1.2"
 faiss-cpu = "^1.9.0"
+tree-sitter = "^0.23.1"
+requests = "^2.32.3"
 
 
 [build-system]
