--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ numpy = "^2.1.2"
 faiss-cpu = "^1.9.0"
 tree-sitter = "^0.23.1"
 requests = "^2.32.3"
+ipython = "^8.28.0"
+tree-sitter-python = "^0.23.2"
 
 
 [build-system]
